<resources>
    <string name="app_name">Supermarket</string>
    <string name="prijava">PRIJAVA</string>
    <string name="reg">REGISTRACIJA</string>
    <string name="Nastavi">NASTAVI</string>
    <string name="pass_forgot">Zaboravljena lozinka?</string>
    <string name="dialog_title">Izaberite fotografiju</string>
    <string name="dialog_positive">Kamera</string>
    <string name="dialog_negative">Galerija</string>
    <string name="proceed">Popunite sva polja</string>
    <string name="uslovikoriscenja">Uslovi Korišćenja</string>
    <string name="registration">Registruj se</string>
    <string name="pravno_lice">Pravno lice</string>
    <string name="newsletter">Da li želite da primate novosti?</string>
    <string name="podaci">Da li želite da sačuvate podatke?</string>
    <string name="days_months">Izabrani mesec nema taj broj dana.</string>
    <string name="invalid_emal">Invalid Email Address</string>
    <string name="required_fields">Niste popunili sva polja.</string>
    <string name="server_error">Proverite internet konekciju i pokušajte ponovo.</string>
    <string name="phone_length">Proverite uneti broj telefona</string>
    <string name="radiogroup_check">Izaberite pol</string>
    <string name="pass_match">Lozinke se ne podudaraju.</string>
    <string name="volley_error">Servis nije dostupan. Pokušajte kasnije.</string>
    <string name="login_incorrect">Uneti podaci su neispravni.</string>
    <string name="add_product">Dodaj u korpu</string>
    <string name="kupi">Kupi</string>
    <string name="adresa">Adresa</string>
    <string name="korpa">Korpa</string>
    <string name="potvrda">Potvrdi</string>
    <string name="konacnaPotvrda">Konačna potvrda</string>
    <string name="praznakorpa">Vaša korpa je prazna."</string>
    <string name="dodato_korpa">Proizvod je uspešno dodat u korpu.</string>
    <string name="proizvod_u_korpi">Proizvod se već nalazi u korpi.</string>
    <string name="profile_data_change">Izmeni</string>
    <string name="changes_saved">Promene su sačuvane.</string>
    <string name="empty_fields">Molimo Vas popunite sva polja</string>
    <string name="logout">Odjavi se</string>
    <string name="profil">Profil</string>
    <string name="settings">Podesavanja</string>
    <string name="empty_category">U izabranoj kategoriji</string>
    <string name="empty">trenutno nema proizvoda.</string>
    <string name="email_pass_forgot">Ukoliko ste uneli ispravnu email adresu, dobićete link za izmenu korisničke lozinke.</string>
    <string name="notifications">Notifikacije</string>
    <string name="termsof_use">Uslovi koriscenja</string>
    <string name="support">Podrska</string>
    <string name="statistics">Statistika</string>
    <string name="pass_switch">Da li želite da promenite lozinku?</string>
    <string name="no_profile">Molimo vas kreirajte profil</string>
    <string name="no_profile_buy">Molimo vas kreirajte profil da biste ucestvovali u kupovini.</string>
    <string name="error">Doslo je do greske.</string>
    <string name="net_error">Proverite internet konekciju.</string>
    <string name="porudzbina">Uspesno ste porucili proizvode.</string>
    <string name="time">Vreme porudzbine: </string>
    <string name="total">Total:  </string>


    <string-array name="paymentOptions">
        <item>Novac u gotovini</item>
        <item>Cekovima</item>
        <item>Platna kartica</item>
        <item>Ziralno placanje</item>


    </string-array>


    <string-array name="cityArray">
        <item>Izaberite grad:</item>
        <item>Beograd</item>
        <item>Novi Sad</item>
        <item>Kragujevac</item>
    </string-array>


    <string-array name="dayArray">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string-array name="monthArray">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="yearArray">
        <item>1999</item>
        <item>1998</item>
        <item>1997</item>
        <item>1996</item>
        <item>1995</item>
        <item>1994</item>
        <item>1993</item>
        <item>1992</item>
        <item>1991</item>
        <item>1990</item>
        <item>1989</item>
        <item>1988</item>
        <item>1987</item>
        <item>1986</item>
        <item>1985</item>
        <item>1984</item>
        <item>1983</item>
        <item>1982</item>
        <item>1981</item>
        <item>1980</item>
        <item>1979</item>
        <item>1978</item>
        <item>1977</item>
        <item>1976</item>
    </string-array>
</resources>
